Minor spacing fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -303,6 +303,11 @@ img {
 		margin: 20px 5px;
 	}
 }
+@media (min-width: 767px) { /* for everything except xs devices */
+	.jumbotron .banner .banner-rhs {
+		padding-left:20px;
+	}
+}
 @media (min-width: 768px) and (max-width: 991px) { /* for sm devices */
 	.iphone-container {
 		width: 303px;
